# km

./: .gitignore  QUICK_START.md  README.md  alembic.ini  docker-compose.yml  fix-build.ps1  fix-build.sh  requirements.txt  start.ps1  start.sh
alembic/: env.py
alembic/versions/: 20250812_0911_a5c89b93aec6_create_users_table.py  20250813_0839_fcfd702cfa79_create_folders_table_and_add_parent_id_.py
backend/: Dockerfile  env.example  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: applications.py  auth.py  chat.py  code_intelligence.py  datasets.py  documents.py  models.py  users.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py
backend/app/schemas/: __init__.py  auth.py  chat.py  dataset.py  model.py  user.py
backend/app/services/: __init__.py  auth.py  chat.py  code_analyzer.py  dataset.py  embedding.py  mcp_client.py  model_service.py  rag.py  user.py  workflow_engine.py
backend/application/models/: model.py
backend/core/: config.py  database.py  exceptions.py  security.py
backend/core/base/: repository.py  service.py
backend/folders/models/: folder.py
backend/folders/repositories/: folder_repository.py
backend/folders/routers/: folder_router.py
backend/folders/schemas/: folder.py
backend/folders/services/: folder_service.py
backend/knowledge/models/: document.py  knowledge.py
backend/users/dependencies/: auth.py
backend/users/models/: user.py
backend/users/repositories/: user_repository.py
backend/users/routers/: user_router.py
backend/users/schemas/: user.py
backend/users/services/: user_service.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ConfirmDialog.tsx  Layout.tsx  LoadingSpinner.tsx  Modal.tsx  ModelCreateForm.tsx  Navbar.tsx  ProtectedRoute.tsx  Sidebar.tsx
frontend/src/pages/: Applications.tsx  Chat.tsx  Dashboard.tsx  Datasets.tsx  Login.tsx  Models.tsx
(+10 files in other folders)
